🫡 chore: SEO images

--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
     <meta name="title" content="BeavsAI - The AI Assistant for OSU Students" />
     <meta name="description"
         content="With BeavsAI, unlock the power of interactive education by adding your courses and initiating conversation with your very own AI assistant." />
+        <meta property="og:url" content="https://beavsai.onrender.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="BeavsAI - The AI Assistant for OSU Students" />
     <meta property="og:description"
         content="With BeavsAI, unlock the power of interactive education by adding your courses and initiating conversation with your very own AI assistant." />
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/1143839263117561946/1182942260044779570/Screen_Shot_2023-12-08_at_11.06.02_PM.png?ex=658687d4&is=657412d4&hm=17a34963e153786f56578766cd3f0f2d62d7afd0658cea0725e8ff5f7a55236b&" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="g10" />
+
+    <meta name="twitter:card" content="https://cdn.discordapp.com/attachments/1143839263117561946/1182942260044779570/Screen_Shot_2023-12-08_at_11.06.02_PM.png?ex=658687d4&is=657412d4&hm=17a34963e153786f56578766cd3f0f2d62d7afd0658cea0725e8ff5f7a55236b&" />
+    <meta name="twitter:title" content="BeavsAI - The AI Assistant for OSU Students">
+    <meta name="twitter:description" content="With BeavsAI, unlock the power of interactive education by adding your courses and initiating conversation with your very own AI assistant.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/1143839263117561946/1182942260044779570/Screen_Shot_2023-12-08_at_11.06.02_PM.png?ex=658687d4&is=657412d4&hm=17a34963e153786f56578766cd3f0f2d62d7afd0658cea0725e8ff5f7a55236b&"> 
+    <meta name="twitter:url" content="https://beavsai.onrender.com/">
 
     <meta name="keywords"
         content="BeavsAI, Beavs, AI, OSU, Oregon State University, Chat, Chatbot, Course, Courses, Class, Classes, Vector, Store, Vector Store, Assistant, AI Assistant, Professor, Professors, Rate My Professor, Rate My Professors, RMP, Oregon State University App Development Club, App Dev Club, App Club, App Development Club, OSU, Go Beavs, Artificial Intelligence, ChatGPT, Educational Technology, Learning App, Conversation AI, Interactive Learning, Technology, OSU Technology, College, University, Student, Students, Education, Learning Experience" />
